fix sidenav overlapping footer

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -27,6 +27,7 @@ body {
         }
     }
     footer {
+        position:relative;
         z-index: 3;
         width: 100%;
         height: 100%;
